--- a/src/fullscreen/_show_bookmarkbar.scss
+++ b/src/fullscreen/_show_bookmarkbar.scss
@@ -1,4 +1,4 @@
-:root:not([sizemode="fullscreen"]) #PersonalToolbar[initialized="true"]:not([collapsed="true"]),
-:root[sizemode="fullscreen"] #PersonalToolbar[initialized="true"] {
+:root:not([sizemode="fullscreen"]) #PersonalToolbar[initialized]:not([collapsed="true"]),
+:root[sizemode="fullscreen"] #PersonalToolbar[initialized] {
   visibility: unset !important; /* Makes the bookmarks toolbar visible if enabled */
 }
